--- a/address-book-application/client/src/Components/Home.module.css
+++ b/address-book-application/client/src/Components/Home.module.css
@@ -2,8 +2,6 @@
 .body-container{
     width: 100%;
     height: 100%;
-    /* background: linear-gradient(hsl(193, 100%, 50%), hsl(179, 100%, 50%)); */
-    /* background: linear-gradient(rgb(1, 13, 29), rgb(0, 0, 28)); */
     background-image: url(../assets/universe.jpg);
     background: radial-gradient(ellipse at bottom, #0e1824 0%, #000000 100%);
 }
@@ -13,12 +11,10 @@
 
 .home-container{
     position: relative;
-    /* width: 100vw; */
     height: calc(100vh - 50px);
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    /* margin-left: 5%; */
     overflow-x: hidden;
     overflow-y: hidden;
 }
@@ -56,41 +52,35 @@
     background-color: cyan;
 }
 
-/* nav{
-    background-color: white;
-    
-} */
-nav ul{
-    width: 100%;
+
+.body-container nav ul.horizontalbar{
     list-style: none;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    /* position: fixed; */
+    justify-content: flex-start; 
+    align-items: flex-start;
 }
-nav li{
+.body-container nav li{
     height: 50px;
 }
-nav a{
+.body-container nav a{
     height: 100%;
     padding: 0 30px;
     text-decoration: none;
     display: flex;
-    justify-content: center;
     align-items: center;
     color: white;
 }
-nav a.product{
+.body-container nav a.product{
     padding: 0 20px;
 }
-nav ul.sidebar a:hover{
+.body-container nav ul.sidebar a:hover{
     background-color: hsl(193, 100%, 70%);
 }
 
-nav li:first-child{
+.body-container nav li:first-child{
     margin-right: auto;
 }
-nav a:hover{
+.body-container nav a:hover{
     transition: 0.3s;
     opacity: 1;
     color: red;
