--- a/address-book-application/client/src/Components/Vault.module.css
+++ b/address-book-application/client/src/Components/Vault.module.css
@@ -3,6 +3,9 @@
     height: 100%;
     background-image: url(../assets/universe.jpg);
     background: radial-gradient(ellipse at bottom, #0e1824 0%, #000000 100%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* overflow-y:  */
 }
 
 nav ul{
@@ -54,6 +57,22 @@ nav li{
     background-color: black;
 }
 
+.form-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    z-index: 10;
+    border: 1px solid black;
+}
+.form-container form{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
 .side-bar{
     position: fixed;
     top: 0;
@@ -102,7 +121,7 @@ nav li{
 
 .home-container-2{
     position: relative;
-    height: calc(100vh - 50px);
+    height: 100%;
     overflow-x: hidden;
     overflow-y: hidden;
 }
