--- a/address-book-application/client/src/Components/Vault.module.css
+++ b/address-book-application/client/src/Components/Vault.module.css
@@ -1,6 +1,6 @@
 .body-container-2{
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     background-image: url(../assets/universe.jpg);
     background: radial-gradient(ellipse at bottom, #0e1824 0%, #000000 100%);
     background-repeat: no-repeat;
