--- a/address-book-application/client/src/Components/AddressForm.module.css
+++ b/address-book-application/client/src/Components/AddressForm.module.css
@@ -1,15 +1,36 @@
 .form-container {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* transform: translate(-50%, -50%); */
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 20px;
-    z-index: 10;
-    border: 1px solid black;
+    /* z-index: 10; */
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 .form-container form{
     display: flex;
     flex-direction: column;
     row-gap: 10px;
+    border-radius: 5px;
+    border: 2px solid cyan;
+    padding: 20px;
+    /* width: 100%; */
+    width: 300px;
+}
+.form-container button{
+    height: 30px;
+    border-radius: 40px;
+    cursor: pointer;
+    font-size: 1rem;
+    background-color: red;
+    color: white;
+    font-weight: bold;
+    border: none;
 }
