--- a/address-book-application/client/src/Components/AddressModal.module.css
+++ b/address-book-application/client/src/Components/AddressModal.module.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
@@ -13,6 +13,7 @@
 
 .modalContent {
     background-color: rgba(0, 0, 0, 0.5);
+    border: 2px solid cyan;
     color: white;
     padding: 20px;
     border-radius: 8px;
