--- a/address-book-application/client/src/Components/ExpiredTokenAlert.module.css
+++ b/address-book-application/client/src/Components/ExpiredTokenAlert.module.css
@@ -4,7 +4,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
