--- a/address-book-application/client/src/Components/ExpiredTokenAlert.module.css
+++ b/address-book-application/client/src/Components/ExpiredTokenAlert.module.css
@@ -37,4 +37,9 @@
     font-weight: bold;
     border: none;
     width: 90%;
+    opacity: 1;
+}
+.ok button:hover{
+    opacity: 0.8;
+    transition: 0.3s;
 }
