--- a/address-book-application/client/src/Components/AddressForm.module.css
+++ b/address-book-application/client/src/Components/AddressForm.module.css
@@ -4,11 +4,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    /* transform: translate(-50%, -50%); */
     background-color: rgba(0, 0, 0, 0.5);
     padding: 20px;
-    /* z-index: 10; */
-    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,7 +18,6 @@
     border-radius: 5px;
     border: 2px solid cyan;
     padding: 20px;
-    /* width: 100%; */
     width: 300px;
 }
 .form-container button{
@@ -33,4 +29,14 @@
     color: white;
     font-weight: bold;
     border: none;
+}
+.address-btn{
+    opacity: 1;
+}
+.form-container button:nth-child(2n-1){
+    margin-top: 10px ;
+}
+.address-btn:hover{
+    opacity: 0.8;
+    transition: 0.3s;
 }
