--- a/address-book-application/client/src/Components/AddressModal.module.css
+++ b/address-book-application/client/src/Components/AddressModal.module.css
@@ -26,5 +26,9 @@
     color: red;
     width: 30px;
     height: 30px;
-
+    opacity: 1;
+}
+.closeButton button:hover{
+    opacity: 0.8;
+    transition: 0.3s;
 }
