--- a/address-book-application/client/src/Components/Vault.module.css
+++ b/address-book-application/client/src/Components/Vault.module.css
@@ -10,9 +10,19 @@
     border: 2px solid cyan;
     background-color: hsla(0, 0%, 66%, 0.208);
     border-radius: 5px;
+    opacity: 1;
+}
+.cards-container:hover{
+    opacity: 0.8;
+    transition: 0.3s;
+}
+.opContainer button:hover{
+    opacity: 0.8;
+    transition: 0.3s;
 }
 .opContainer button{
     border-radius: 5px;
+    opacity: 1;
 }
 .opContainer h2:hover {
     cursor: pointer;
@@ -155,6 +165,7 @@ nav li{
     border-radius: 5px;
     padding: 5% 10%;
     color: white;
+    opacity: 1;
 }
 .create-button{
     background-color: rgb(87, 131, 235);
@@ -164,6 +175,15 @@ nav li{
     padding: 1% 1%;
     color: white;
     display: flex;
+    opacity: 1;
+}
+.create-button:hover{
+    opacity: 0.8;
+    transition: 0.3s;
+}
+.sort-by select:hover{
+    opacity: 0.8;
+    transition: 0.3s;
 }
 
 @media(max-width: 400px){
