--- a/address-book-application/client/src/Components/AddressModal.module.css
+++ b/address-book-application/client/src/Components/AddressModal.module.css
@@ -11,7 +11,7 @@
 }
 
 .modalContent {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: black;
     border: 2px solid cyan;
     color: white;
     padding: 20px;
