--- a/address-book-application/client/src/Components/Vault.module.css
+++ b/address-book-application/client/src/Components/Vault.module.css
@@ -45,7 +45,6 @@ nav li{
 nav .searchBar-container{
     height: 50px;
     width: 40%;
-    /* margin: 0px 30px; */
     padding: 0;
     margin-right: auto;
 }
@@ -76,7 +75,7 @@ nav li{
 .body-container-2 nav a:hover{
     transition: 0.3s;
     opacity: 1;
-    color: red;
+    color: #5783EB;
     background-color: black;
 }
 
@@ -134,9 +133,8 @@ nav li{
     color: red;
 }
 .horizontal-bar li a.product{
-    font-style: italic;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 .menu-button{
     display: none;
@@ -156,6 +154,7 @@ nav li{
 }
 .sort-by {
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
 }
 .sort-by select{
